# src/controllers/praiasController.js
@@ -1,81 +1,77 @@
 const praiasModel = require('../models/praiasModel')
 const SECRET = process.env.SECRET
 
-const getTodasPraias = async (request, response) => {
+
+
+const getTodasPraias = async (req, res) => {
     try {
         const todasPraias = await praiasModel.find()
-        response.status(200).json(todasPraias)
+        res.status(200).json(todasPraias)
+
     } catch (error) {
-        response.status(500).json({message: error.message})
+        res.status(500).json({ message: error.message })
     }
-}
+};
 
-const getPraiaId = async (request, response) => {
-
-    const {id} = request.params
-    
-    try{
-        const findPraia = await praiasModel.findById(id)
-        if (findPraia == null) {
-            return response.status(404).json({ message: "Inválido." })
-    } 
-        response.status(200).json(findPraia)
-    } catch (error) {
-        response.status(500).json({ message: error.message })
-    }
-}
-
-const atualizarPraia = (request, response) => {
+const getPraiaId = async (req, res) => {
     try {
-        const idRequest = request.params.id
-        let upResquest = request.body
+        const findPraia = await praiasModel.findById(req.params.id)
+        res.status(200).json(findPraia)
 
-        let praiaEncontrada = praias.findIndex(praia => praia.id == idRequest)
-        praias.splice(praiaEncontrada, 1, upResquest)
+    } catch (error) {
+        res.status(500).json({ message: error.message })
+        console.error(error)
+    }
+};
 
-        response.status(201).json({
-            message: "Atualizada!",
-            praias
-        })
-    } catch (err) {
-        response.status(500).send({
-            message: "Não atualizou!"
-        })
+const atualizarPraia = async (req, res) => {
+    try {
+        const { id } = req.params
+        const findPraia = await praiasModel.findById(id)
+
+        if (findPraia.passaVan == false) {
+            findPraia.passaVan = true
+        } else {
+            findPraia.passaVan = false
+        }
+
+        savedPraia = await findPraia.save()
+        res.status(200).json({ message: "Dado alterado com sucesso!", savedPraia })
+    } catch (error) {
+        res.status(500).json({ message: error.message })
+        console.error(error)
     }
 }
 
 const createPraia = async (req, res) => {
-   try {
-      const { nome, distanciaKm, passaVan, precoReal, gostou } = req.body
+    try {
+        const { nome, distanciaKm, passaVan, precoReal, gostou } = req.body
 
-      const newPraia = new praiasModel({
-        nome, distanciaKm, passaVan, precoReal, gostou
-      })
+        const newPraia = new praiasModel({
+            nome, distanciaKm, passaVan, precoReal, gostou
+        })
 
-      const savedPraia = await newPraia.save()
+        const savedPraia = await newPraia.save()
 
-      res.status(201).json(savedPraia)
-   } catch (error) {
-     console.error(error)
-     res.status(500).json({ message: error.message })
-   }
+        res.status(201).json(savedPraia)
+
+    } catch (error) {
+        console.error(error)
+        res.status(500).json({ message: error.message })
+    }
 };
 
-const deletePraia = (request, response) => {
+const deletePraia = async (req, res) => {
     try {
-        const idRequest = request.params.id
-        const indexPraia = praias.findIndex(praia => praia.id == idRequest)
+        const { id } = req.params
+        await praiasModel.findByIdAndDelete(req.params.id)
+        const message = `Praia com ${id}, foi removida!`
 
-        praias.splice(indexPraia, 1)
+        res.status(200).json(message)
 
-        response.status(200).send({
-            messagem: "Deletada com sucesso. Tchau praia.",
-            praias
-        })
-    } catch (err) {
-        response.status(400).send({
-            message: "Não foi possível deletar."
-        })
+    } catch (error) {
+        console.error(error)
+        res.status(500).json({ message: error.message })
     }
 }
 
