# src/models/usersModel.js
@@ -1,0 +1,15 @@
+const mongoose = require('mongoose')
+
+const usersSchema = new mongoose.Schema({
+    nome: {type: String, require: true},
+    email:{type: String, unique: true, required: true, lowercase: true},
+    senha:{type: String},
+},
+{
+    versionKey:false
+
+})
+
+const users = mongoose.model('users',usersSchema)
+
+module.exports= users
