# src/routes/praiasRoutes.js
@@ -1,14 +1,13 @@
 
 const controller = require('../controllers/praiasController')
-
 const express = require('express')
 
 const router = express.Router()
 
 router.get('/praias', controller.getTodasPraias)
-router.get('/praiaporid', controller.getPraiaId)
-router.put('/atualizar', controller.atualizarPraia)
-router.post('/new', controller.createPraia)
-router.delete('/delete', controller.deletePraia)
+router.get('/praia/:id', controller.getPraiaId)
+router.patch('/atualizar/:id', controller.atualizarPraia)
+router.post('/novapraia', controller.createPraia)
+router.delete('/delete/:id', controller.deletePraia)
 
 module.exports = router
